[package]
name         = "algorithms-rs"
version      = "0.1.5"
edition      = "2021"
authors      = ["davirain <davirian.yin@gmail.com>"]
license      = "MIT"
readme       = "README.md"
keywords     = ["alogrithms", "no-std", "intro-to-algorithms"]
documentation = "https://docs.rs/algorithms-rs"
homepage = "https://docs.rs/algorithms-rs"
repository = "https://github.com/DaviRain-Su/algorithms-rs"
categories = ["algorithms"]
description  = """
    Implementation of The Introduction to Algorithms Thrid Edition 
    By Rust programming Language
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.60", default-features = false }
sha2 = { version = "0.10", default-features = false }
libm = "0.2.5"

[dev-dependencies]
hex-literal = "0.3.4"
rs_merkle = "1.2.0"

[features]
default = ["std"]
std = [
    "anyhow/std",
    "sha2/std",
]