[package]
name = "algorithms-rs"
version = "0.1.7"
authors = ["davirain <davirian.yin@gmail.com>"]
categories = ["algorithms"]
documentation = "https://docs.rs/algorithms-rs"
edition = "2021"
homepage = "https://docs.rs/algorithms-rs"
keywords = ["alogrithms", "no-std", "intro-to-algorithms"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/DaviRain-Su/algorithms-rs"
description = """
    Implementation of The Introduction to Algorithms Thrid Edition 
    By Rust programming Language
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.60", default-features = false }
libm = "0.2.5"
log = { version = "0.4.17", default-features = false }
sha2 = { version = "0.10", default-features = false }

[dev-dependencies]
hex-literal = "0.3.4"
rs_merkle = "1.2.0"

[features]
default = ["std"]
std = [
  "anyhow/std",
  "log/std",
  "sha2/std",
]
