[package]
name = "algorithms-rs"
version = "0.1.11"
authors = ["davirain <davirian.yin@gmail.com>"]
categories = ["algorithms"]
documentation = "https://docs.rs/algorithms-rs"
edition = "2021"
homepage = "https://docs.rs/algorithms-rs"
keywords = ["alogrithms", "no-std", "intro-to-algorithms"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/DaviRain-Su/algorithms-rs"
description = """
    Implementation of The Introduction to Algorithms Thrid Edition
    By Rust programming Language
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.60"
libm = "0.2.5"
log = "0.4.17"
num-traits = "0.2.15"
sha2 = "0.10"
thiserror = "1.0.61"

[dev-dependencies]
hex-literal = "0.3.4"
rs_merkle = "1.2.0"
